--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
 
 /* Styling */
 body {
-	background-color: #171D28;
+	background:url(../images/bg_main.png) no-repeat center center fixed;
+	background-size: cover;
 }
 .navbar-default .navbar-nav>li>a:hover {
 	color: hsla(157,38%,48%,1.00);
@@ -31,29 +32,27 @@ body {
     }
 @media only screen and (min-width : 992px){
 	.heroimg {
-	margin-top: -80px;
+		background-image: url(../images/heroimg2.png);
+		background-size: cover;
+    	background-repeat: no-repeat;
+		width: 100vw;
+		margin-top: -20px;
 	}
     }
 
+/* Large Panels Styling */
+.large-panels {
+	margin-top: 20px;
+}
 
 /* FOOTER CSS */
 .site-footer {
-	background-color: black;
+	background-color: #3e5a7c;
+}
+.footer-text {
+	font-family: 'Pacifico', cursive;
 }
 
-@media only screen 
-and (min-width : 1224px) {
-	.site-footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	height: 120px;
-	width: 100%;
-	color: #fff;
-	background-color: hsla(0,0%,0%,0.28);
-	padding: 0.01em 16px;
-	}
-}
 
 .social-links{
 	display: flex;
