--- a/css/styles.css
+++ b/css/styles.css
@@ -1,112 +1,113 @@
 /* CSS Document */
 /* Import statements */
-@import url('https://fonts.googleapis.com/css?family=Pacifico');
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
 
 /* Styling */
 body {
-	background:url(../images/bg_main.png) no-repeat center center fixed;
-	background-size: cover;
+    background: url(../images/bg_main.png) no-repeat center center fixed;
+    background-size: cover;
 }
-.navbar-default .navbar-nav>li>a:hover {
-	color: hsla(157,38%,48%,1.00);
+.navbar-default .navbar-nav > li > a:hover {
+    color: hsla(157, 38%, 48%, 1);
 }
 .navbar-brand {
-	font-family: 'Pacifico', cursive;
-	font-size: 27px;
+    font-family: "Pacifico", cursive;
+    font-size: 27px;
 }
 /*HeroImg Styling*/
 .mobile-header {
-	padding: 30px;
+    padding: 30px;
 }
 .start-panels {
-	margin-top: 110px;
+    margin-top: 110px;
 }
-@media only screen and (min-width : 320px) and (max-width:991px){
-	.heroimg {
-		background-image: url(../images/heroimg-mobile.png);
-		background-size: cover;
-    	background-repeat: no-repeat;
-		width: 100vw;
-		margin-top: -20px;
-	}
+@media only screen and (min-width: 320px) and (max-width: 991px) {
+    .heroimg {
+        background-image: url(../images/heroimg-mobile.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100vw;
+        margin-top: -20px;
     }
-@media only screen and (min-width : 992px){
-	.heroimg {
-		display: grid;
-		grid-template-columns: 3fr auto 3fr;
-		grid-template-rows: 1fr 1fr auto;
-		background-image: url(../images/heroimg2.png);
-		background-size: cover;
-    	background-repeat: no-repeat;
-		width: 100vw;
-		height: 700px;
-		margin-top: -20px;
-	}
+}
+@media only screen and (min-width: 992px) {
+    .heroimg {
+        display: grid;
+        grid-template-columns: 3fr auto 3fr;
+        grid-template-rows: 1fr 1fr auto;
+        background-image: url(../images/heroimg2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100vw;
+        height: 700px;
+        margin-top: -20px;
     }
+}
 .anchor-start {
-	grid-column: 2;
-	grid-row: 3;
+    grid-column: 2;
+    grid-row: 3;
 }
 .anchor-start .glyphicon-arrow-down {
-	color: lightgray;
-	font-size: 50px;
-	padding: 20px;
+    color: lightgray;
+    font-size: 50px;
+    padding: 20px;
 }
 .anchor-start a:hover .glyphicon-arrow-down {
-	 color: white;
+    color: white;
 }
 
 /* Large Panels Styling */
 .large-panels {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 /* FOOTER CSS */
 .site-footer {
-	background-color: #3e5a7c;
+    background-color: #3e5a7c;
 }
 .footer-text {
-	font-family: 'Pacifico', cursive;
+    font-family: "Pacifico", cursive;
 }
 
-.social-links{
-	display: flex;
-	justify-content: space-around;
+.social-links {
+    display: flex;
+    justify-content: space-around;
 }
 .social-links i {
-	font-size: 30px;
-	padding-bottom: 20px;
+    font-size: 30px;
+    padding-bottom: 20px;
 }
 .social-links a {
-	color: white;
+    color: white;
 }
 .social-links a:hover {
-	text-shadow: 1px 1px 10px white;
+    text-shadow: 1px 1px 10px white;
 }
-.footer-rights{
-	margin-top: 5%;
-	color: darkgray;
+.footer-rights {
+    margin-top: 5%;
+    color: darkgray;
 }
 /* Gallery Page Styling */
-.gallery-row-two, .gallery-row-three {
-	margin-top: 20px;
-	margin-bottom: 20px;
+.gallery-row-two,
+.gallery-row-three {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-.test-gallery>img {
-	opacity: 0.4;
+.test-gallery > img {
+    opacity: 0.4;
 }
-.test-gallery:hover>img {
-	opacity: 1;
-	box-shadow: 1px 1px 10px 2px white;
+.test-gallery:hover > img {
+    opacity: 1;
+    box-shadow: 1px 1px 10px 2px white;
 }
 .gallery-header {
-	text-shadow: 1px 1px 4px cyan;
+    text-shadow: 1px 1px 4px cyan;
 }
 .collapse-photo-header {
-	font-family:'Pacifico', cursive;
-	color: white;
-	text-shadow: 1px 1px 4px cyan;
-	text-decoration: none;
+    font-family: "Pacifico", cursive;
+    color: white;
+    text-shadow: 1px 1px 4px cyan;
+    text-decoration: none;
 }
 
 /* Styling for the about page*/
@@ -114,20 +115,20 @@ body {
     display: flex;
     justify-content: center;
 }
-.center-pills h2{
-    font-family: 'Pacifico', cursive;
-	font-size: 45px;
+.center-pills h2 {
+    font-family: "Pacifico", cursive;
+    font-size: 45px;
 }
-.center-pills>li>a:hover{
-	background-color: hsla(0,0%,0%,0.00);
+.center-pills > li > a:hover {
+    background-color: hsla(0, 0%, 0%, 0);
 }
-.center-pills>li>a:hover h2{
-	text-shadow: 1px 1px 30px white;
+.center-pills > li > a:hover h2 {
+    text-shadow: 1px 1px 30px white;
 }
 
 .meet-our-teachers {
-	margin-bottom: 20px;
-	margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 /* Makes panels on "all tutoring" page have space between image and text */
 .services img {
@@ -159,5 +160,9 @@ body {
 
 .price {
     color: grey;
+    padding-left: 1em;
+}
+
+#info h4, #info h4 + p {
     padding-left: 1em;
 }
