--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 /* Styling */
 body {
-    background: url(../images/bg_main.png) no-repeat center center fixed;
+    background: url(../images/bg_main_v2.png) no-repeat center center fixed;
     background-size: cover;
 }
 .navbar-default .navbar-nav > li > a:hover {
